<resources>
    <string name="app_name">LazySusan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entreeImageDesc">Entree image</string>
    <string name="entreeBusinessDefault">Entree Business</string>
    <string name="entreePriceDefault">$0.00</string>
    <string name="entreeNameDefault">Entree Name</string>
    <string name="pullTextMore">More info</string>
    <string name="pullTextLess">Less info</string>
    <string name="entreeDescDefault">Entree description</string>
    <string name="entreeRatingDefault">0.0/5</string>
    <string name="businessNameDefault">Business Name</string>
    <string name="phoneDefault">(555) 555-5555</string>
    <string name="webDefault">www.abc.com</string>
    <string name="addressDefault">123 Broadway Ave</string>
</resources>
